# Notion-Goal-Creator

./: .env.sample  README.md  main.py  pyproject.toml  setup.py
app/: cli.py  client.py  response.json
app/prompts/: goal_parser_prompt.py
