[project]
name = "notion-goal-creator"
version = "0.1.0"
description = ""
authors = [
    {name = "fateh",email = "fatehss@g.ucla.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "notion-client (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langgraph (>=0.3.8,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
